--- a/Actividades/Tarea 4/Actividad 4.html
+++ b/Actividades/Tarea 4/Actividad 4.html
@@ -6,11 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplos de clases y Herencia</title>
+    <script src="actividad 4.js"></script>
+    <style>
+        h1, h2 {
+            text-transform: uppercase;
+        }
+    </style>
 </head>
 
 <body>
 
     <h1>Ejemplo de clases y Herencia</h1>
+
+    <h2>- Animales - Perros - Gatos - </h2>
+    <input type="button" value="Cargar Datos" onclick="cargar()">
+    <input type="button" value="Mostrar datos" onclick="mostar()">
 
 </body>
 
