--- a/Actividades/Tarea 4/Actividad 4.html
+++ b/Actividades/Tarea 4/Actividad 4.html
@@ -8,8 +8,14 @@
     <title>Ejemplos de clases y Herencia</title>
     <script src="actividad 4.js"></script>
     <style>
-        h1, h2 {
+        h1,
+        h2 {
             text-transform: uppercase;
+        }
+
+        table, tr, td {
+            border-collapse: collapse;
+            border: 1px solid black;
         }
     </style>
 </head>
@@ -20,7 +26,11 @@
 
     <h2>- Animales - Perros - Gatos - </h2>
     <input type="button" value="Cargar Datos" onclick="cargar()">
-    <input type="button" value="Mostrar datos" onclick="mostar()">
+    <input type="button" value="Mostrar datos" onclick="mostrar()">
+
+
+    
+    <div id="tabla"></div>
 
 </body>
 
