--- a/Actividades/Tarea 5 DOM/windows.html
+++ b/Actividades/Tarea 5 DOM/windows.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Windows</title>
 </head>
+
 <body>
-    submit ok
+    <h1>Windows</h1>
+
+
+    <img src="https://d500.epimg.net/cincodias/imagenes/2019/08/26/lifestyle/1566818317_265854_1566818366_noticia_normal.jpg">
 </body>
+
 </html>
