tarea cookies hecha

--- a/Temas/Frames/documento2.html
+++ b/Temas/Frames/documento2.html
@@ -9,7 +9,7 @@
     <script type="text/JavaScript">
         window.onload=iniciar;
         function  iniciar(){
-            document.getElementById("bcambiar").onclick=cambiar;
+            document.getElementById("bcambiar").onclick=cambiar; // al manejador se le asigna la funcion cambiar con el valor igual. Cada vez que cambie el estado onclick, se ejecuta la función
  
         }
         function cambiar(){
